--- a/Internship.dotnetcoreSessions/Views/Home/Index.cshtml
+++ b/Internship.dotnetcoreSessions/Views/Home/Index.cshtml
@@ -1,17 +1,29 @@
 ﻿@* @model int *@
 @* @model string *@
-@model Students
+@* @model Students *@
+
+@model List<Students>
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="">
     <h1 class="display-4">Welcome</h1>
     @* <h1 class="display-4">Value from Controller : @Model</h1> *@
-    <ul>
+ @*    <ul>
         <li>Rolle No : @Model.Id</li>
         <li>Name : @Model.Name</li>
         <li>City : @Model.City</li>
-    </ul>
+    </ul> *@
+    @foreach (var student in Model)
+    {
+        <ul>
+            <li>Rolle No : @student.Id</li>
+            <li>Name: @student.Name</li>
+            <li>City: @student.City</li>
+        </ul>
+        <hr />
+    }
+    
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
