--- a/EMS.UI/Views/Shared/_EmployeeLayout.cshtml
+++ b/EMS.UI/Views/Shared/_EmployeeLayout.cshtml
@@ -5,52 +5,44 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EMS.UI</title>
+    <title>Employee Portal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/EMS.UI.styles.css" asp-append-version="true" />
-
-    @* Datatable library reference *@
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-    <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.0.5/af-2.7.0/b-3.0.2/b-html5-3.0.2/b-print-3.0.2/fc-5.0.0/sc-2.4.1/sb-1.7.1/sp-2.3.1/sl-2.0.1/datatables.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.3.6/css/buttons.dataTables.min.css">
+    <link rel="stylesheet" href="~/Project1.UI.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EMS</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Employee" asp-action="Home">Employee Portal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        @if (ContextAccessor.HttpContext.Session.GetString("Admin") != "True")
+                        @if (ContextAccessor.HttpContext.Session.GetString("userName") == null)
                         {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Register">Register</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Home">Admin Portal</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Admin Control</a>
                             </li>
                         }
-                        @if (ContextAccessor.HttpContext.Session.GetString("Admin") == "True")
+                        @if (ContextAccessor.HttpContext.Session.GetString("userName") != null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="BranchList">Branches</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Profile">Profile</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="DeptList">Departments</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Application">Leave Applications</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Employee List</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ApplicationList">Leave Applications</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-danger" asp-area="" asp-controller="Admin" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-danger" asp-area="" asp-controller="Employee" asp-action="Logout">Logout</a>
                             </li>
                         }
 
@@ -67,23 +59,11 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - EMS.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - EMS
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-
-    @* Datatable library reference *@
-    <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.0.5/af-2.7.0/b-3.0.2/b-html5-3.0.2/b-print-3.0.2/fc-5.0.0/sc-2.4.1/sb-1.7.1/sp-2.3.1/sl-2.0.1/datatables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
-
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
